migrate generate image to frontend
